--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-fast-compare": "^2.0.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "react-toastify": "^4.5.2"
